tests/snapshots/run_wpt_conformance__trtx_greaterOrEqual_float16_broadcast_0D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "greater_or_equal.https.any.js",
    "greaterOrEqual float16 broadcast 0D to 4D",
    "trtx",
    Failed {
        msg: Some(
            "greater_or_equal :: greaterOrEqual float16 broadcast 0D to 4D: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [-8.046875, -5.5234375, -2.09765625, -7.45703125, -5.44921875, 9.8046875, -3.60546875, 4.08984375, -5.06640625, 1.58203125, 5.67578125, -4.33984375, 1.6943359375, 2.92578125, -7, -2.52734375, 1.443359375, 7.86328125, 5.78125, 1.87109375, -0.5234375, 0.434326171875, 8.9375, 1.6572265625]; inputA: [-1.0185546875]\n  expected output: [1, 1, 1, 1, 1, 0, 1, 0, 1, 0 ...] (len=24)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=24)\n  expected output full nd:\n[1, 1, 1, 1, 1, 0, 1, 0, 1, 0, ...] (len=24, shape=[2, 2, 2, 3])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[];\n    inputB: f16[2, 2, 2, 3];\n  }\n\n  nodes {\n    [output] = greaterOrEqual(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
